# traveller-world-gen

./: .dockerignore  .gitignore  .pylintrc  CLAUDE.md  Dockerfile  LICENSE  README.md  RELEASE-NOTES.md  conftest.py  function_app.py  html_render.py  install.bat  install.ps1  install.sh  issues.md  local.settings.json.example  pyproject.toml  pyrightconfig.json  pytest.ini  render_system_json.py  requirements-dev.txt  requirements.txt  run-fastapi.bat  run-fastapi.ps1  run-fastapi.sh  run-gui.command  sample.html  system_map.py  system_pipeline.py  tables.py  traveller_belt_physical.py  traveller_gen_ui.spec  traveller_hydro_detail.py  traveller_map_fetch.py  traveller_moon_gen.py  traveller_orbit_gen.py  traveller_stellar_gen.py  traveller_system_gen.py  traveller_world_atmosphere_detail.py  traveller_world_culture_detail.py  (+17 more)
.claude/: settings.json  settings.local.json
azure-api/: function_app.py  host.json  local.settings.json.example  requirements.txt  traveller_world_tech_detail.py
context/: api-layer.md  azure-sync.md  common.md  data-structures.md  deferred-features.md  detail-moon.md  gen-ui.md  map-fetch.md  research-system-map-perspective.md  session-history.md  social-detail.md  stellar-orbit.md  system-map.md  system-world.md
deploy/: Caddyfile  docker-compose.truenas.yml
docs/: AZURE_DEPLOYMENT.md  BUILD.md  GITHUB_PUSH.md  MACOS-GATEKEEPER.md  TRUENAS_DEPLOYMENT.md  Traveller World Generator User Guide.md  VSCODE.md  developer-guide.md  pipeline.md  release-v1.4.0.md  release-v1.4.1.md  release-v1.5.0.md  release-v1.5.1.md  release-v1.5.28.md  (+30 more)
(+111 files in other folders)
